float_eq/tests/derive_tests/generic/generic_derive_float_eq_debug.stderr
error: This trait does not yet support derive for generic types.
 --> $DIR/generic_derive_float_eq_debug.rs:3:28
  |
3 | #[derive(Debug, PartialEq, FloatEqDebug)]
  |                            ^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
