float_eq/tests/derive_tests/generic/generic_derive_float_eq_debug.rs
use float_eq::FloatEqDebug;

#[derive(Debug, PartialEq, FloatEqDebug)]
#[float_eq(ulps = "MyComplexGenericUlps")]
struct MyComplexGeneric<T> {
    re: T,
    im: T,
}

fn main() {}
